# Proyecto1_lambtha

./: .isort.cfg  LICENSE  main.py  pyproject.toml
udea_firstproyect/: Bot.py  config.py
